--- a/.github/workflows/build-macos-amd64.yaml
+++ b/.github/workflows/build-macos-amd64.yaml
@@ -18,23 +18,22 @@ jobs:
 
       - name: Set up x86_64 Homebrew
         run: |
-          arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-          echo 'eval "$(/usr/local/bin/brew shellenv)"' >> ~/.zshrc
-          eval "$(/usr/local/bin/brew shellenv)"
+            sudo softwareupdate --install-rosetta --agree-to-license
+            arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+            echo 'eval "$(/usr/local/bin/brew shellenv)"' >> ~/.zshrc
+            eval "$(/usr/local/bin/brew shellenv)"
 
-      - name: Install Dependencies
+      - name: Install Dependencies (x86_64)
         run: |
-          brew update
-          brew install cmake ninja llvm boost
+            arch -x86_64 brew install cmake ninja llvm boost
 
       - name: Configure Build
         run: |
-          mkdir -p build
-          cd build
-          arch -x86_64 cmake .. -DCMAKE_BUILD_TYPE=Release -G "Ninja" \
-                               -DCMAKE_OSX_ARCHITECTURES=x86_64 \
-                               -DBOOST_ROOT=$(brew --prefix boost)
-
+            mkdir -p build
+            cd build
+            arch -x86_64 cmake .. -DCMAKE_BUILD_TYPE=Release -G "Ninja" \
+                                -DCMAKE_OSX_ARCHITECTURES=x86_64 \
+                                -DBOOST_ROOT=$(arch -x86_64 brew --prefix boost)
       - name: Build Project
         run: |
           cd build
