--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,10 @@
 name: CI
 
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron: '0 0 1 * *' # This line schedules the workflow to run at 00:00 on the first day of every month
+# on:
+#   push:
+#   pull_request:
+#   schedule:
+#     - cron: '0 0 1 * *' # This line schedules the workflow to run at 00:00 on the first day of every month
 
 jobs:
   build:
