--- a/.github/workflows/build-macos-x86.yaml
+++ b/.github/workflows/build-macos-x86.yaml
@@ -18,17 +18,19 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          # Install essential tools
-          brew update
-          brew install cmake ninja llvm
-          brew reinstall boost --build-from-source --universal
+            # Install essential tools for the runner architecture
+            brew update
+            brew install cmake ninja llvm
+
+            # Ensure Boost is installed specifically for x86_64
+            arch -x86_64 /usr/local/bin/brew install boost
 
       - name: Configure Build
         run: |
           mkdir -p build
           pushd build
           cmake .. -DCMAKE_BUILD_TYPE=Release -G "Ninja" \
-                   -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64" \
+                   -DCMAKE_OSX_ARCHITECTURES="x86_64" \
                    -DBOOST_ROOT=$(brew --prefix boost)
           popd
 
