Trying to get both macos architectures to work

--- a/.github/workflows/build-macos-x86.yaml
+++ b/.github/workflows/build-macos-x86.yaml
@@ -23,7 +23,7 @@ jobs:
             brew install cmake ninja llvm
 
             # Ensure Boost is installed specifically for x86_64
-            arch -x86_64 /usr/local/bin/brew install boost
+            arch -x86_64 brew install boost
 
       - name: Configure Build
         run: |
