--- a/.github/workflows/build_macos-universal.yaml
+++ b/.github/workflows/build_macos-universal.yaml
@@ -16,20 +16,27 @@ jobs:
         with:
           submodules: true
 
+      - name: Install x86_64 Homebrew (if missing)
+        run: |
+          if [[ ! -d "/usr/local/Homebrew" ]]; then
+            echo "Installing Homebrew for x86_64..."
+            arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          else
+            echo "x86_64 Homebrew already installed."
+          fi
+
       - name: Install Dependencies
         run: |
-          # Install essential tools
+          # Install essential tools (native)
           brew update
           brew install cmake ninja llvm
 
-          # Install Boost for both architectures
-          if [[ $(uname -m) == "arm64" ]]; then
-            echo "Installing Boost for Universal Build"
-            arch -x86_64 /opt/homebrew/bin/brew install boost
-            brew install boost
-          else
-            brew install boost
-          fi
+          # Install Boost separately for each architecture
+          echo "Installing Boost for arm64..."
+          brew install boost
+
+          echo "Installing Boost for x86_64..."
+          arch -x86_64 /usr/local/bin/brew install boost
 
       - name: Configure Build
         run: |
