--- a/.github/workflows/build_macos-universal.yaml
+++ b/.github/workflows/build_macos-universal.yaml
@@ -1,41 +1,37 @@
-name: Build Universal C++ Application with Boost
-
-on:
-  push:
-    branches:
-      - '*'
-
 jobs:
   build:
     runs-on: macos-latest
-    strategy:
-      matrix:
-        architecture: [x86_64, arm64]
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Boost for ${{ matrix.architecture }}
+      - name: Download boost
         run: |
-          if [ "${{ matrix.architecture }}" == "x86_64" ]; then
-            ARCH_FLAGS="-arch x86_64"
-          else
-            ARCH_FLAGS="-arch arm64"
-          fi
-          ./bootstrap.sh
-          ./b2 address-model=64 architecture=$ARCH_FLAGS
+          curl -L https://dl.bintray.com/boostorg/release/1.76.0/source/boost_1_76_0.tar.gz -o boost.tar.gz
+          tar -xzf boost.tar.gz
 
-      - name: Install Boost for ${{ matrix.architecture }}
+      - name: Build and install Boost for both architectures
         run: |
-          if [ "${{ matrix.architecture }}" == "x86_64" ]; then
-            sudo ./b2 install --prefix=/usr/local/boost-x86_64
-          else
-            sudo ./b2 install --prefix=/usr/local/boost-arm64
-          fi
+          for ARCH in x86_64 arm64; do
+            if [ "$ARCH" == "x86_64" ]; then
+              ARCH_FLAGS="-arch x86_64"
+              PREFIX="/usr/local/boost-x86_64"
+            else
+              ARCH_FLAGS="-arch arm64"
+              PREFIX="/usr/local/boost-arm64"
+            fi
+            cd boost_1_76_0
+            ./bootstrap.sh
+            ./b2 address-model=64 architecture=$ARCH_FLAGS
+            sudo ./b2 install --prefix=$PREFIX
+            cd ..
+            # Clean up after each build
+            rm -rf boost_1_76_0
+            tar -xzf boost.tar.gz
+          done
 
       - name: Merge Boost libraries to create universal binaries
-        if: matrix.architecture == 'x86_64'
         run: |
           mkdir -p /usr/local/boost-universal/lib
           for lib in /usr/local/boost-x86_64/lib/*.a; do
@@ -44,7 +40,6 @@ jobs:
           done
 
       # - name: Build universal C++ application
-      #   if: matrix.architecture == 'x86_64'
       #   run: |
       #     mkdir -p build
       #     cd build
@@ -52,8 +47,6 @@ jobs:
       #     make
       #
       # - name: Upload artifacts
-      #   if: matrix.architecture == 'x86_64'
       #   uses: actions/upload-artifact@v3
       #   with:
       #     name: universal-application
-      #     path: build/my_application
