Experimenting, universal build

--- a/.github/workflows/build_macos-universal.yaml
+++ b/.github/workflows/build_macos-universal.yaml
@@ -1,3 +1,10 @@
+name: Build Universal C++ Application with Boost
+
+on:
+  push:
+    branches:
+      - '*'
+
 jobs:
   build:
     runs-on: macos-latest
