--- a/.github/workflows/build_macos-universal.yaml
+++ b/.github/workflows/build_macos-universal.yaml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Download boost
         run: |
-          curl -L https://dl.bintray.com/boostorg/release/1.76.0/source/boost_1_76_0.tar.gz -o boost.tar.gz
-          tar -xzf boost.tar.gz
+          curl -L https://archives.boost.io/release/1.87.0/source/boost_1_87_0.tar.bz2 -o boost.tar.bz2
+          tar -xjf boost.tar.bz2
 
       - name: Build and install Boost for both architectures
         run: |
@@ -29,13 +29,13 @@ jobs:
               ARCH_FLAGS="-arch arm64"
               PREFIX="/usr/local/boost-arm64"
             fi
-            cd boost_1_76_0
+            cd boost_1_87_0
             ./bootstrap.sh
             ./b2 address-model=64 architecture=$ARCH_FLAGS
             sudo ./b2 install --prefix=$PREFIX
             cd ..
             # Clean up after each build
-            rm -rf boost_1_76_0
+            rm -rf boost_1_87_0
             tar -xzf boost.tar.gz
           done
 
