--- a/.github/workflows/build_macos-universal.yaml
+++ b/.github/workflows/build_macos-universal.yaml
@@ -16,36 +16,38 @@ jobs:
 
       - name: Download boost
         run: |
-          curl -L https://archives.boost.io/release/1.87.0/source/boost_1_87_0.tar.bz2 -o boost.tar.bz2
+          curl -s -L https://archives.boost.io/release/1.87.0/source/boost_1_87_0.tar.bz2 -o boost.tar.bz2
           tar -xjf boost.tar.bz2
 
       - name: Build and install Boost for both architectures
         run: |
-          for ARCH in x86_64 arm64; do
-            if [ "$ARCH" == "x86_64" ]; then
-              ARCH_FLAGS="-arch x86_64"
-              PREFIX="/usr/local/boost-x86_64"
-            else
-              ARCH_FLAGS="-arch arm64"
-              PREFIX="/usr/local/boost-arm64"
-            fi
-            cd boost_1_87_0
-            ./bootstrap.sh
-            ./b2 address-model=64 architecture=$ARCH_FLAGS
-            sudo ./b2 install --prefix=$PREFIX
-            cd ..
-            # Clean up after each build
-            rm -rf boost_1_87_0
-            tar -xzf boost.tar.gz
-          done
+          ./bootstrap.sh
+          ./b2 address-model=64 architecture=arm+x86 link=static threading=multi runtime-link=static --with-system --with-program_options --with-serialization --with-context --with-coroutine --with-asio --with-property_tree
+          # for ARCH in intel arm; do
+          #   if [ "$ARCH" == "intel" ]; then
+          #     ARCH_FLAGS="-arch x86"
+          #     PREFIX="/usr/local/boost-x86"
+          #   else
+          #     ARCH_FLAGS="-arch arm64"
+          #     PREFIX="/usr/local/boost-arm64"
+          #   fi
+          #   cd boost_1_87_0
+          #   ./bootstrap.sh
+          #   ./b2 address-model=64 architecture=$ARCH_FLAGS link=static threading=multi runtime-link=static --with-system --with-program_options --with-serialization --with-context --with-coroutine --with-asio --with-property_tree
+          #   sudo ./b2 install --prefix=$PREFIX
+          #   cd ..
+          #   # Clean up after each build
+          #   rm -rf boost_1_87_0
+          #   tar -xzf boost.tar.gz
+          # done
 
-      - name: Merge Boost libraries to create universal binaries
-        run: |
-          mkdir -p /usr/local/boost-universal/lib
-          for lib in /usr/local/boost-x86_64/lib/*.a; do
-            libname=$(basename $lib)
-            lipo -create $lib /usr/local/boost-arm64/lib/$libname -output /usr/local/boost-universal/lib/$libname
-          done
+      # - name: Merge Boost libraries to create universal binaries
+      #   run: |
+      #     mkdir -p /usr/local/boost-universal/lib
+      #     for lib in /usr/local/boost-x86_64/lib/*.a; do
+      #       libname=$(basename $lib)
+      #       lipo -create $lib /usr/local/boost-arm64/lib/$libname -output /usr/local/boost-universal/lib/$libname
+      #     done
 
       # - name: Build universal C++ application
       #   run: |
