Experimenting, universal build

--- a/.github/workflows/build_macos-universal.yaml
+++ b/.github/workflows/build_macos-universal.yaml
@@ -23,7 +23,7 @@ jobs:
         run: |
           cd boost_1_87_0
           ./bootstrap.sh
-          ./b2 address-model=64 architecture=arm+x86 link=static threading=multi runtime-link=static --with-system --with-program_options --with-serialization --with-context --with-coroutine --with-property_tree
+          ./b2 address-model=64 architecture=arm+x86 link=static threading=multi runtime-link=static --with-system --with-program_options --with-serialization --with-context --with-coroutine
           sudo ./b2 install
           # for ARCH in intel arm; do
           #   if [ "$ARCH" == "intel" ]; then
@@ -35,7 +35,7 @@ jobs:
           #   fi
           #   cd boost_1_87_0
           #   ./bootstrap.sh
-          #   ./b2 address-model=64 architecture=$ARCH_FLAGS link=static threading=multi runtime-link=static --with-system --with-program_options --with-serialization --with-context --with-coroutine --with-asio --with-property_tree
+          #   ./b2 address-model=64 architecture=$ARCH_FLAGS link=static threading=multi runtime-link=static --with-system --with-program_options --with-serialization --with-context --with-coroutine --with-asio
           #   sudo ./b2 install --prefix=$PREFIX
           #   cd ..
           #   # Clean up after each build
